AZUREUS CHANGELOG
-----------------

2007.01.xx | Azureus 2.5.0.4

FEATURE: Core | New users default save directory is not located in their "My Documents" directory, under "Azureus Downloads" [TuxPaper]
FEATURE: Plug | Unsafe config read/writing [parg]

CHANGE: Core  | Added scrape delay for stopped/errored torrents, and torrents with high share ratios [TuxPaper]
CHANGE: Core  | Allow only one active scrape for each tracker [TuxPaper]
CHANGE: Core  | Release piece-map when not required [parg]
CHANGE: Core  | ASN lookup via DNS queries only [parg]
CHANGE: Core  | Full recheck of torrent when part of torrent fails hash check on completion [TuxPaper]

BUGFIX: Core  | Fix choke/unchoke cycle bug for lan local peers [Nolar]
BUGFIX: Core  | Fix auto moving torrent data with DND files [TuxPaper]
BUGFIX: UI    | Fix crash when opening non-torrent URL when OS has no recognized HTML viewer [TuxPaper]
BUGFIX: UI    | Fix big icon in name column for OSes using GTK [TuxPaper]
BUGFIX: UI    | Make Download Basket work again for drag and dropping [TuxPaper]




2007.01.10 | Azureus 2.5.0.2

FEATURE: Core | Added method to XFS specific allocation of new files [Greg]
FEATURE: Core | Added per-torrent max seeds parameter [Parg]
FEATURE: Core | Added per-torrent max peers parameter [Parg]
FEATURE: UI   | Total file size added to Open Torrent Window [TuxPaper]
FEATURE: UI   | Option to show complete downloads with incomplete "do not download" files in the download area [TuxPaper]
FEATURE: UI   | Added custom user comment field [amc1]
FEATURE: UI   | Added file extension column in files view [amc1]
FEATURE: UI   | Spinners for config field that take numbers [TuxPaper]
FEATURE: UI   | Setting for Minimum # of Simultaneous Active Downloads to have running at any given time [TuxPaper]
FEATURE: UI   | Console UI NAT test [Parg]
FEATURE: UI   | Option to have separate rename and retarget menu items in Files view [amc1]
FEATURE: Plug | Plugins can now create submenus. [amc1]